src/opengl/qopenglpaintengine.cpp
@@ -2526,7 +2526,7 @@ void QOpenGL2PaintEngineEx::clip(const QVectorPath &path, Qt::ClipOperation op)
                 && qFuzzyIsNull(state()->matrix.m11())
                 && qFuzzyIsNull(state()->matrix.m22())))
         {
-            state()->rectangleClip = state()->rectangleClip.intersected(state()->matrix.mapRect(rect).toAlignedRect());
+            state()->rectangleClip &= qt_mapFillRect(rect, state()->matrix);
             d->updateClipScissorTest();
             return;
         }
